CLEAN: fix spacing

--- a/src/styles/Coding.css
+++ b/src/styles/Coding.css
@@ -1,18 +1,18 @@
-#codingPageContent{
+#codingPageContent {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-left: 250px;
 }
 
-#codingPageContent .ContentItem{
+#codingPageContent .ContentItem {
     display: flex;
     flex-direction: column-reverse;
 
     margin: clamp(10px, calc(100% * 0.05), 50px) 0;
     max-width: 1000px;
     width: 90%;
-    
+
     border-color: #2c2c2c;
     border-width: 2px;
     border-style: solid;
@@ -20,15 +20,16 @@
     box-shadow: 5px 5px;
 }
 
-#codingPageContent .TextSectionTittle{
-    color: #388bfd;;
+#codingPageContent .TextSectionTittle {
+    color: #388bfd;
+    ;
 
     font-size: 2.3rem;
     text-align: center;
     overflow-x: auto;
 }
 
-#codingPageContent .TextSectionDescription{
+#codingPageContent .TextSectionDescription {
     white-space: break-spaces;
     color: #929292;
     word-wrap: normal;
@@ -37,10 +38,10 @@
 
     overflow-x: auto;
     padding: 0px 10px;
-    height: 100%;  
+    height: 100%;
 }
 
-#codingPageContent .TextSectionSkills{
+#codingPageContent .TextSectionSkills {
     display: flex;
     align-items: center;
     font-size: 1rem;
@@ -51,10 +52,10 @@
 
 }
 
-#codingPageContent .TextSectionSkills h2{
+#codingPageContent .TextSectionSkills h2 {
 
     margin: 0px 8px;
-    color:#388bfd;
+    color: #388bfd;
     white-space: nowrap;
 
     background-color: #0f376f;
@@ -63,7 +64,7 @@
     border-radius: 20px;
 }
 
-#codingPageContent .PictureSection{
+#codingPageContent .PictureSection {
     display: flex;
     flex: 1;
 
@@ -77,21 +78,21 @@
     background-repeat: no-repeat;
 }
 
-#codingPageContent .PictureSection img{
+#codingPageContent .PictureSection img {
     height: auto;
     max-height: 400px;
     width: auto;
     max-width: 100%;
- }
+}
 
-#codingPageContent .PictureSectionNavigation{
+#codingPageContent .PictureSectionNavigation {
     display: flex;
     flex-direction: row;
     position: absolute;
     z-index: 1;
 }
 
-#codingPageContent .PictureSectionNavigation input{
+#codingPageContent .PictureSectionNavigation input {
     height: 15px;
     width: 15px;
     margin-bottom: 10px;
